--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<center><p class="animated infinite wobble"><b><u>Happiest Birthday Sanju!</b></u></p><center>
 				<p> Helloww babe, today is your birthday very special day , so I decided I would wish you in a way, that I know the best pata nahi keise wish karu par yeh sabse zyada best laga toh bs banana chalu kar diya tha hehe. &nbsp;<i class="em-svg em-blush"></i></p>
 				<p> Happiest Birthday Sanju and you're very special for me , I wish the best for you and thanks for being there for me and for making me a better person.
-				  I am so lucky to have you in my life. you're amazing , jabse tu meri life main aayi haina sab achha hon gaya hain , like har ek cheez tujhse dedicate hoti hain , songs , pictures , nature's , every single thing , jo bhi kuch achha sa dekhta hun sabse pehle tu dimag main aati hain (aati kyan dimag main hi ghumti rehti hain hamesha) so aaj ka din bahot special hain aur tu bahot zyda enjoy karegi aur yeh saal aur zyda achha jayega aur bahoott khush rehna again happiest Birthday moii laddu </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
+				  I am so lucky to have you in my life. you're amazing, so aaj ka din bahot special hain aur tu bahot zyda enjoy karegi aur yeh saal aur zyda achha jayega aur bahoott khush rehna again happiest Birthday moii laddu </p><p class="signed"><u>Made With </b><b> <i class="em-svg em-heart"></i></p>
 			</div>
 		</div>
 		<div id="card-front">
