--- a/index_desktop.html
+++ b/index_desktop.html
@@ -173,7 +173,7 @@ ga('send', 'pageview');
         <div class='container'>
             <div class='row'>
                 <div class='col-lg-12 text-center'>
-                    <h3 class='section-heading btn-xl'><a href='https://t.me/Like_road_straight_forward'>Wishes from Oxy<br>[ Tap to know me ]</a></h3>
+                    <h3 class='section-heading btn-xl'><a href='https://t.me/Wtf_Sanaa'>Wishes from Oxy<br>[ Tap to know me ]</a></h3>
                 </div>
             </div>
         </div>
