--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ ga('send', 'pageview');
                   <i class='fa fa-circle fa-stack-2x text-pri'></i>
                   <i class='fa fa-camera-retro fa-stack-1x fa-inverse'></i>
                   </span>
-                    <h4 class='service-heading'>Poem ! </h4>
+                    <h4 class='service-heading'>Cooking ! </h4>
                     <p class='text-mm'>She likes to cook's, whenever possible :-)
                         <br>bahot mast khana banati hain :P
                         <br> [ Also, her little brother are pro in cooking=_=] </p>
